--- a/package.json
+++ b/package.json
@@ -129,9 +129,9 @@
     "@types/redux-mock-store": "1.0.2",
     "@types/reselect": "2.2.0",
     "@types/semver": "^6.0.0",
-    "@types/slate": "0.47.1",
+    "@types/slate": "0.47.9",
     "@types/slate-plain-serializer": "0.6.1",
-    "@types/slate-react": "0.22.5",
+    "@types/slate-react": "0.22.9",
     "@types/testing-library__jest-dom": "5.9.5",
     "@types/testing-library__react-hooks": "^3.2.0",
     "@types/tinycolor2": "1.4.2",
@@ -297,8 +297,8 @@
     "rxjs": "6.6.3",
     "search-query-parser": "1.5.4",
     "semver": "^7.1.3",
-    "slate": "0.47.8",
-    "slate-plain-serializer": "0.7.10",
+    "slate": "0.47.9",
+    "slate-plain-serializer": "0.7.11",
     "tether": "1.4.7",
     "tether-drop": "https://github.com/torkelo/drop",
     "tinycolor2": "1.4.1",
@@ -308,7 +308,16 @@
   },
   "resolutions": {
     "caniuse-db": "1.0.30000772",
-    "underscore": "1.12.1"
+    "underscore": "1.12.1",
+    "@types/slate": "0.47.9",
+    "**/react": "17.0.1",
+    "**/@types/react": "16.9.9",
+    "**/@types/react-dom": "16.9.9",
+    "**/react-dom": "17.0.1",
+    "**/@rushstack/rig-package": "0.2.4",
+    "**/@rushstack/node-core-library": "3.34.3",
+    "**/@microsoft/api-extractor-model": "7.10.3",
+    "@rushstack/ts-command-line": "4.12.1"
   },
   "workspaces": {
     "packages": [
