--- a/package.json
+++ b/package.json
@@ -222,7 +222,6 @@
     "@emotion/css": "11.1.3",
     "@emotion/react": "11.1.5",
     "@grafana/aws-sdk": "0.0.3",
-    "@grafana/slate-react": "0.22.10-grafana",
     "@popperjs/core": "2.5.4",
     "@reduxjs/toolkit": "1.5.0",
     "@sentry/browser": "5.25.0",
@@ -299,6 +298,7 @@
     "semver": "^7.1.3",
     "slate": "0.47.9",
     "slate-plain-serializer": "0.7.11",
+    "slate-react": "0.22.10",
     "tether": "1.4.7",
     "tether-drop": "https://github.com/torkelo/drop",
     "tinycolor2": "1.4.1",
