--- a/package.json
+++ b/package.json
@@ -311,6 +311,7 @@
     "underscore": "1.12.1",
     "@types/slate": "0.47.9",
     "**/react": "17.0.1",
+    "**/moment": "2.29.1",
     "**/@types/react": "16.9.9",
     "**/@types/react-dom": "16.9.9",
     "**/react-dom": "17.0.1",
